--- a/index.html
+++ b/index.html
@@ -44,63 +44,63 @@
 
 		<tr>
 			<td>BOOTSTRAP FRAME WORK</td>
-			<td><img src="1 star.png"></td>
+			<td><img src="1 star.PNG"></td>
 		</tr>
 		<tr>
 			<td>CSS(3)</td>
-			<td><img src="5 star.png"></td>
+			<td><img src="5 star.PNG"></td>
 		</tr>
 			<tr>
 				<td>HTML(5)</td>
-				<td><img src="5 star.png"></td>
+				<td><img src="5 star.PNG"></td>
 			</tr>
 			<tr>
 				<td>JSON</td>
-				<td><img src="1 star.png"></td>
+				<td><img src="1 star.PNG"></td>
 			</tr>
 			<tr>
 				<td>MY SQL</td>
-				<td><img src="4 star.png"></td>
+				<td><img src="4 star.PNG"></td>
 			</tr>
 		
 			<tr>
 				<td>PHP</td>
-				<td><img src="3 star.png"></td>
+				<td><img src="3 star.PNG"></td>
 			</tr>
 	
 			<tr>
 				<td>JAVA</td>
-				<td><img src="2 star.png"></td>
+				<td><img src="2 star.PNG"></td>
 			</tr>
 
 			<tr>
 				<td>JAVA SCRIPT</td>
-				<td><img src="4 star.png"></td>
+				<td><img src="4 star.PNG"></td>
 			</tr>
 
 			<tr>
 				<td>LESS</td>
-				<td><img src="2 star.png"></td>
+				<td><img src="2 star.PNG"></td>
 			</tr>
 
 			<tr>
 				<td>LARAVEL FRAMEWORK</td>
-				<td><img src="5 star.png"></td>
+				<td><img src="5 star.PNG"></td>
 			</tr>
 
 			<tr>
 				<td>MVC PATTER</td>
-				<td><img src="2 star.png"></td>
+				<td><img src="2 star.PNG"></td>
 			</tr>
 			<tr>
 				<td>ANGULARJS</td>
-				<td><img src="2 star.png"></td>
+				<td><img src="2 star.PNG"></td>
 			</tr>
 			<tr>
 				<td>WORDPRESS</td>
-				<td ><img src="5 star.png"></td>
+				<td ><img src="5 star.PNG"></td>
 				<td>JAVA</td>
-				<td><img src="2 star.png" cell></td>
+				<td><img src="2 star.PNG" cell></td>
 			</tr>
 	</table>
 	</body>
